--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -4,3 +4,20 @@
 <p> {{post.author}} </p>
 
 <img src="{{post.image.url}}" alt="">
+
+<hr>
+<h3> Comments </h3>
+<ul>
+    {% for comment in post_comments %}
+        <li>
+            <h5>{{comment.user}} - {{comment.comment}} - {{comment.created_at}}</h5>
+        </li>
+    {% endfor %}
+</ul>
+<hr>
+<h3> Add New Comment </h3>
+<form method="post">
+    {% csrf_token %}
+    {{form}}
+    <input type="submit" value="Add New Comment">
+</form>
